--- a/magick/Makefile.am
+++ b/magick/Makefile.am
@@ -52,7 +52,8 @@ else
 magick_libMagickCore_la_LDFLAGS_VERSION = -export-symbols-regex ".*"
 endif
 
-magick_libMagickCore_la_LDFLAGS = -no-undefined $(magick_libMagickCore_la_LDFLAGS_VERSION) \
+magick_libMagickCore_la_LDFLAGS = -no-undefined \
+  $(magick_libMagickCore_la_LDFLAGS_VERSION) \
   $(OSX_GCOV_LDFLAG) $(MAGICK_LT_RELEASE_OPTS) -version-info \
   $(MAGICK_LIBRARY_CURRENT):$(MAGICK_LIBRARY_REVISION):$(MAGICK_LIBRARY_AGE)
 
