--- a/wand/Makefile.am
+++ b/wand/Makefile.am
@@ -127,7 +127,9 @@ endif
 
 wand_libMagickWand_la_LDFLAGS = -no-undefined \
   $(wand_libMagickWand_la_LDFLAGS_VERSION) \
-	$(MAGICK_LT_RELEASE_OPTS) -version-info \
+	$(MAGICK_LT_RELEASE_OPTS) \
+	-release $(MAGICK_ABISUFFIX) \
+	-version-info \
 	$(MAGICK_LIBRARY_CURRENT):$(MAGICK_LIBRARY_REVISION):$(MAGICK_LIBRARY_AGE)
 wand_libMagickWand_la_LIBADD = $(MAGICKCORE_LIBS) $(X11_LIBS) $(GOMP_LIBS) $(MATH_LIBS)
 
