--- a/configure.ac
+++ b/configure.ac
@@ -3007,9 +3007,9 @@ AC_SUBST(MODULES_BASEDIRNAME)
 if test "x$MODULES_DIRNAME" = "x"; then
    MODULES_DIRNAME=${MODULES_BASEDIRNAME}-${MAGICK_ABI_SUFFIX}
 else
-   # not defined by default 
-   AC_DEFINE_UNQUOTED(MODULES_DIRNAME,"$MODULES_DIRNAME",Module directory dirname (if different of default))
+   MODULES_DIRNAME=${MODULES_BASEDIRNAME}
 fi
+AC_DEFINE_UNQUOTED(MODULES_DIRNAME,"$MODULES_DIRNAME",Module directory dirname)
 AC_SUBST(MODULES_DIRNAME)
 
 MODULES_RELATIVE_PATH="${MODULES_DIRNAME}"
@@ -3027,6 +3027,7 @@ AC_SUBST(CODER_DIRNAME)
 
 CODER_RELATIVE_PATH="${CODER_DIRNAME}"
 CODER_PATH="${MODULES_PATH}/${CODER_DIRNAME}"
+AC_DEFINE_UNQUOTED(CODER_PATH,"$CODER_PATH",Location of coder modules)
 AC_SUBST(CODER_PATH)
 
 #
@@ -3041,6 +3042,7 @@ AC_SUBST(FILTER_DIRNAME)
 
 FILTER_RELATIVE_PATH="${FILTER_DIRNAME}"
 FILTER_PATH="${MODULES_PATH}/${FILTER_DIRNAME}"
+AC_DEFINE_UNQUOTED(FILTER_PATH,"$FILTER_PATH",Location of filter modules)
 AC_SUBST(FILTER_PATH)
 
 #
