--- a/Makefile.in
+++ b/Makefile.in
@@ -4797,14 +4797,14 @@ tests_wandtest_LDFLAGS = $(LDFLAGS)
 tests_wandtest_LDADD = $(MAGICKCORE_LIBS) $(MAGICKWAND_LIBS)
 TESTS_XFAIL_TESTS = 
 TESTS_TESTS = \
+	tests/cli-pipe.tap \
+	tests/cli-colorspace.tap \
 	tests/validate-compare.tap \
 	tests/validate-composite.tap \
 	tests/validate-convert.tap \
 	tests/validate-identify.tap \
 	tests/validate-import.tap \
 	tests/validate-montage.tap \
-	tests/validate-pipe.tap \
-	tests/validate-colorspace.tap \
 	tests/validate-stream.tap \
 	tests/validate-formats-in-memory.tap \
 	tests/validate-formats-on-disk.tap \
