--- a/Makefile.in
+++ b/Makefile.in
@@ -190,6 +190,7 @@
 
 
 
+
 VPATH = @srcdir@
 am__make_dryrun = \
   { \
@@ -368,8 +369,8 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(codersdir)" "$(DESTDIR)$(filtersdir)" \
 	"$(DESTDIR)$(libdir)" "$(DESTDIR)$(bindir)" \
-	"$(DESTDIR)$(man1dir)" "$(DESTDIR)$(configlibdir)" \
-	"$(DESTDIR)$(configsharedir)" \
+	"$(DESTDIR)$(bindir)" "$(DESTDIR)$(man1dir)" \
+	"$(DESTDIR)$(configlibdir)" "$(DESTDIR)$(configsharedir)" \
 	"$(DESTDIR)$(configsharearchdir)" "$(DESTDIR)$(docdir)" \
 	"$(DESTDIR)$(pkgconfigdir)" "$(DESTDIR)$(includedir)" \
 	"$(DESTDIR)$(magickincdir)" "$(DESTDIR)$(magickppincdir)" \
@@ -1968,6 +1969,7 @@ utilities_stream_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
 	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CCLD) \
 	$(AM_CFLAGS) $(CFLAGS) $(utilities_stream_LDFLAGS) $(LDFLAGS) \
 	-o $@
+SCRIPTS = $(bin_SCRIPTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -2843,7 +2845,7 @@ CLEANFILES = \
 
 
 # Binary scripts
-bin_SCRPTS = \
+bin_SCRIPTS = \
 	$(MAGICK_BIN_SCRPTS) \
 	$(WAND_BIN_SCRPTS) \
 	$(MAGICKPP_SCRPTS)
@@ -6459,6 +6461,41 @@ utilities/stream.$(OBJEXT): utilities/$(am__dirstamp) \
 utilities/stream$(EXEEXT): $(utilities_stream_OBJECTS) $(utilities_stream_DEPENDENCIES) $(EXTRA_utilities_stream_DEPENDENCIES) utilities/$(am__dirstamp)
 	@rm -f utilities/stream$(EXEEXT)
 	$(AM_V_CCLD)$(utilities_stream_LINK) $(utilities_stream_OBJECTS) $(utilities_stream_LDADD) $(LIBS)
+install-binSCRIPTS: $(bin_SCRIPTS)
+	@$(NORMAL_INSTALL)
+	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(bindir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(bindir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  if test -f "$$d$$p"; then echo "$$d$$p"; echo "$$p"; else :; fi; \
+	done | \
+	sed -e 'p;s,.*/,,;n' \
+	    -e 'h;s|.*|.|' \
+	    -e 'p;x;s,.*/,,;$(transform)' | sed 'N;N;N;s,\n, ,g' | \
+	$(AWK) 'BEGIN { files["."] = ""; dirs["."] = 1; } \
+	  { d=$$3; if (dirs[d] != 1) { print "d", d; dirs[d] = 1 } \
+	    if ($$2 == $$4) { files[d] = files[d] " " $$1; \
+	      if (++n[d] == $(am__install_max)) { \
+		print "f", d, files[d]; n[d] = 0; files[d] = "" } } \
+	    else { print "f", d "/" $$4, $$1 } } \
+	  END { for (d in files) print "f", d, files[d] }' | \
+	while read type dir files; do \
+	     if test "$$dir" = .; then dir=; else dir=/$$dir; fi; \
+	     test -z "$$files" || { \
+	       echo " $(INSTALL_SCRIPT) $$files '$(DESTDIR)$(bindir)$$dir'"; \
+	       $(INSTALL_SCRIPT) $$files "$(DESTDIR)$(bindir)$$dir" || exit $$?; \
+	     } \
+	; done
+
+uninstall-binSCRIPTS:
+	@$(NORMAL_UNINSTALL)
+	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || exit 0; \
+	files=`for p in $$list; do echo "$$p"; done | \
+	       sed -e 's,.*/,,;$(transform)'`; \
+	dir='$(DESTDIR)$(bindir)'; $(am__uninstall_files_from_dir)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -10193,13 +10230,13 @@ check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-TESTS check-local
 check: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) check-recursive
-all-am: Makefile $(LTLIBRARIES) $(PROGRAMS) $(MANS) $(DATA) $(HEADERS) \
-		all-local
+all-am: Makefile $(LTLIBRARIES) $(PROGRAMS) $(SCRIPTS) $(MANS) $(DATA) \
+		$(HEADERS) all-local
 install-binPROGRAMS: install-libLTLIBRARIES
 
 installdirs: installdirs-recursive
 installdirs-am:
-	for dir in "$(DESTDIR)$(codersdir)" "$(DESTDIR)$(filtersdir)" "$(DESTDIR)$(libdir)" "$(DESTDIR)$(bindir)" "$(DESTDIR)$(man1dir)" "$(DESTDIR)$(configlibdir)" "$(DESTDIR)$(configsharedir)" "$(DESTDIR)$(configsharearchdir)" "$(DESTDIR)$(docdir)" "$(DESTDIR)$(pkgconfigdir)" "$(DESTDIR)$(includedir)" "$(DESTDIR)$(magickincdir)" "$(DESTDIR)$(magickppincdir)" "$(DESTDIR)$(magickpptopincdir)" "$(DESTDIR)$(wandincdir)"; do \
+	for dir in "$(DESTDIR)$(codersdir)" "$(DESTDIR)$(filtersdir)" "$(DESTDIR)$(libdir)" "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)" "$(DESTDIR)$(man1dir)" "$(DESTDIR)$(configlibdir)" "$(DESTDIR)$(configsharedir)" "$(DESTDIR)$(configsharearchdir)" "$(DESTDIR)$(docdir)" "$(DESTDIR)$(pkgconfigdir)" "$(DESTDIR)$(includedir)" "$(DESTDIR)$(magickincdir)" "$(DESTDIR)$(magickppincdir)" "$(DESTDIR)$(magickpptopincdir)" "$(DESTDIR)$(wandincdir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: $(BUILT_SOURCES)
@@ -10293,8 +10330,8 @@ install-dvi: install-dvi-recursive
 
 install-dvi-am:
 
-install-exec-am: install-binPROGRAMS install-exec-local \
-	install-libLTLIBRARIES
+install-exec-am: install-binPROGRAMS install-binSCRIPTS \
+	install-exec-local install-libLTLIBRARIES
 
 install-html: install-html-recursive
 
@@ -10337,14 +10374,14 @@ ps: ps-recursive
 
 ps-am:
 
-uninstall-am: uninstall-binPROGRAMS uninstall-codersLTLIBRARIES \
-	uninstall-configlibDATA uninstall-configshareDATA \
-	uninstall-configsharearchDATA uninstall-docDATA \
-	uninstall-filtersLTLIBRARIES uninstall-includeHEADERS \
-	uninstall-libLTLIBRARIES uninstall-local \
-	uninstall-magickincHEADERS uninstall-magickppincHEADERS \
-	uninstall-magickpptopincHEADERS uninstall-man \
-	uninstall-pkgconfigDATA uninstall-wandincHEADERS
+uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
+	uninstall-codersLTLIBRARIES uninstall-configlibDATA \
+	uninstall-configshareDATA uninstall-configsharearchDATA \
+	uninstall-docDATA uninstall-filtersLTLIBRARIES \
+	uninstall-includeHEADERS uninstall-libLTLIBRARIES \
+	uninstall-local uninstall-magickincHEADERS \
+	uninstall-magickppincHEADERS uninstall-magickpptopincHEADERS \
+	uninstall-man uninstall-pkgconfigDATA uninstall-wandincHEADERS
 
 uninstall-man: uninstall-man1
 
@@ -10364,30 +10401,31 @@ uninstall-man: uninstall-man1
 	distclean-hdr distclean-libtool distclean-local distclean-tags \
 	distcleancheck distdir distuninstallcheck dvi dvi-am html \
 	html-am info info-am install install-am install-binPROGRAMS \
-	install-codersLTLIBRARIES install-configlibDATA \
-	install-configshareDATA install-configsharearchDATA \
-	install-data install-data-am install-data-local \
-	install-docDATA install-dvi install-dvi-am install-exec \
-	install-exec-am install-exec-local install-filtersLTLIBRARIES \
-	install-html install-html-am install-includeHEADERS \
-	install-info install-info-am install-libLTLIBRARIES \
-	install-magickincHEADERS install-magickppincHEADERS \
-	install-magickpptopincHEADERS install-man install-man1 \
-	install-pdf install-pdf-am install-pkgconfigDATA install-ps \
-	install-ps-am install-strip install-wandincHEADERS \
-	installcheck installcheck-am installdirs installdirs-am \
-	maintainer-clean maintainer-clean-generic \
-	maintainer-clean-local mostlyclean mostlyclean-compile \
-	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	recheck tags tags-recursive uninstall uninstall-am \
-	uninstall-binPROGRAMS uninstall-codersLTLIBRARIES \
-	uninstall-configlibDATA uninstall-configshareDATA \
-	uninstall-configsharearchDATA uninstall-docDATA \
-	uninstall-filtersLTLIBRARIES uninstall-includeHEADERS \
-	uninstall-libLTLIBRARIES uninstall-local \
-	uninstall-magickincHEADERS uninstall-magickppincHEADERS \
-	uninstall-magickpptopincHEADERS uninstall-man uninstall-man1 \
-	uninstall-pkgconfigDATA uninstall-wandincHEADERS
+	install-binSCRIPTS install-codersLTLIBRARIES \
+	install-configlibDATA install-configshareDATA \
+	install-configsharearchDATA install-data install-data-am \
+	install-data-local install-docDATA install-dvi install-dvi-am \
+	install-exec install-exec-am install-exec-local \
+	install-filtersLTLIBRARIES install-html install-html-am \
+	install-includeHEADERS install-info install-info-am \
+	install-libLTLIBRARIES install-magickincHEADERS \
+	install-magickppincHEADERS install-magickpptopincHEADERS \
+	install-man install-man1 install-pdf install-pdf-am \
+	install-pkgconfigDATA install-ps install-ps-am install-strip \
+	install-wandincHEADERS installcheck installcheck-am \
+	installdirs installdirs-am maintainer-clean \
+	maintainer-clean-generic maintainer-clean-local mostlyclean \
+	mostlyclean-compile mostlyclean-generic mostlyclean-libtool \
+	pdf pdf-am ps ps-am recheck tags tags-recursive uninstall \
+	uninstall-am uninstall-binPROGRAMS uninstall-binSCRIPTS \
+	uninstall-codersLTLIBRARIES uninstall-configlibDATA \
+	uninstall-configshareDATA uninstall-configsharearchDATA \
+	uninstall-docDATA uninstall-filtersLTLIBRARIES \
+	uninstall-includeHEADERS uninstall-libLTLIBRARIES \
+	uninstall-local uninstall-magickincHEADERS \
+	uninstall-magickppincHEADERS uninstall-magickpptopincHEADERS \
+	uninstall-man uninstall-man1 uninstall-pkgconfigDATA \
+	uninstall-wandincHEADERS
 
 magick-install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(magickincdir)
